--- a/styles.css
+++ b/styles.css
@@ -611,7 +611,7 @@ body {
 
 .modal-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 15px;
   padding-bottom: 12px;
@@ -950,4 +950,5 @@ body {
     font-size: 0.5em;
   }
 }
+
 
