--- a/styles.css
+++ b/styles.css
@@ -373,8 +373,7 @@ body {
   box-shadow: 0 2px 6px rgba(0,0,0,0.06);
   order: 2;
   transition: background-color 0.3s ease;
-  margin-top: 2.6em;
-}
+  }
 /*
 .stats-section h2 {
   font-size: 1.1em;
@@ -981,5 +980,12 @@ body {
   .month-day-time {
     font-size: 0.5em;
   }
+  /* Десктопная версия */
+@media (min-width: 1025px) {
+  .stats-section {
+    margin-top: 2.6em;
+  }
 }
+}
+
 
